@@ -9,6 +9,7 @@ Cacti CHANGELOG
 -bug#0000848: Poller[0] ERROR: PHP Script Server communications lost.
 -bug#0000870: Change Graph Template: Template list not sorted
 -bug#0000882: Add "collapsable" brances in the graph trees view
+-bug#0000867: Ceanup poller.php and lib/poller.php
 -bug: Data Queries were not sorted properly during initial display.
 
 0.8.6i
